* Added ability to remember the last sorting chosen by user on the list of courses in admin area.
* Improved select2 field for prerequisites and remove current course from the list.
* Improved MarketPress product thumbnail and images integration.
* Improved link building to student profile in admin area.
* Improved HTML login & signup forms.
* FIxed on signup form double error messages.
* Fixed "Grades" screen.
* Fixed a wrong link to student profile from students tab on a course edit screen.
* Fixed a bug with prerequisites courses when we have only one prerequisite course.
* Fixed registration email tokens.
* Fixed registration form shortcode.
* Fixed a wrong icon on assessments page, it was always shown fail icon.
* Fixed missing html attributes on certificate preview.
* Fixed missing messages on login/signup form.

= 2.0.4 =
-------------------------------------------------
* Added ability to enroll, when we use course_join_button, but we are not logged.
* Added sanitization course id field in "course_join_button" shortcode.
* Added ability to save course state and exit.
* Added filter "coursepress_unit_add_open_date" to allow display open unit date.
* Added auto-creating missing directories for PDF certificates.
* Added ability to show "Withdraw" link on [cp_pages page="student_dashboard"].
* Added fields "Display Name", "Email" and "Registered" to "Student Profile" page.
* Added "Edit user" link on "Student Profile" page.
* Improved time count method for modules, pages and units.
* Improved login/signup popups for small screens.
* Improved integration with WooCommerce - when we change order status from completed to another status, a student will be withdrawn from the ordered courses.
* Limiting facilitator role, from now on it can only edit allowed courses.
* Improved the appearance of buttons on course frontend page.
* Improved "My Profile" screen.
* Delete related course data from a usermeta table when deleting a course.